--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -25,22 +25,28 @@
 					<table class="table table-striped table-responsive-md">
 						<thead>
 							<tr>
+								<th>Id</th>
 								<th>Name</th>
 								<th>Email</th>
 								<th>Type</th>
 								<th>Gender</th>
 								<th>Birth Date</th>
+								<th>Username</th>
+								<th>Password</th>
 								<th>Edit</th>
 								<th>Delete</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr th:each="user : ${users}">
+								<td class="text-info" th:text="${user.id}"></td>
 								<td class="text-info" th:text="${user.name}"></td>
 								<td class="text-info" th:text="${user.email}"></td>
 								<td class="text-info" th:text="${user.type}"></td>
 								<td class="text-info" th:text="${user.gender}"></td>
 								<td class="text-info" th:text="${user.birthDate}"></td>
+								<td class="text-info" th:text="${user.username}"></td>
+								<td class="text-info" th:text="${user.password}"></td>
 								<td><a th:href="@{/users/edit/{id}(id=${user.id})}"
 									class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
 								<td><a th:href="@{/users/del/{id}(id=${user.id})}"
