--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,6 +23,7 @@
 				
 				<p><a href="/users/"><i class="fas fa-user-edit ml-2"></i> Go to Users</a></p>
 				<p><a href="/apps/"><i class="fas fa-calendar ml-2"></i> Go to Appointments</a></p>
+				<a href="/logout" class="btn btn-primary">Logout</a>
 			</div>
 		</div>
 	</div>
